--- a/src/css/style.css
+++ b/src/css/style.css
@@ -20,6 +20,24 @@ a {
 	text-decoration: none;
 }
 
+.button {
+	font: inherit;
+
+	text-align: center;
+	color: #ffffff;
+	vertical-align: middle;
+	text-transform: uppercase;
+
+	background-color: #000000;
+	border: none;
+}
+ 
+.button: hover,
+.button: focus,
+.button: active {
+	background-color: #663d15;
+}
+
 .main-navigation {
 	font-size: 16px;
 	font-height: 20px;
@@ -66,4 +84,116 @@ color: #000000;
 	background-repeat: repeat;
 }
 
+.index-colums h2 {
+	font-size: 30px;
+	line-height: 42px;
+}
 
+.news-list {
+	list-style: none;
+}
+
+.news-item time {
+	text-transform: none;
+}
+
+.gallery-content {
+	background-color: #e5e5e5;
+	border: 7px solid #ffffff;
+}
+
+.appointment-item input {
+	font: inherit;
+
+	background-color: transparent;
+	border: 2px solid #000000
+}
+
+.appointment-item input:focus {
+	border-color: #663d15;
+}
+
+.main-footer {
+	color: #ffffff;
+
+	background-color: #212121;
+	background-image: url("../img/pattern-bg-dark.jpg");
+	background-position: 0 0;
+	background-repeat: repeat;
+}
+
+.footer-contacts a {
+	color: #ffffff;
+	text-decoration: underline;
+}
+
+.footer-contacts a:hover,
+.footer-contacts a:focus {
+	text-decoration: none;
+}
+
+.footer-social {
+	text-align: center;
+}
+
+.footer-social ul {
+	list-style: none;
+}
+
+.social-button {
+	color: #ffffff;
+}
+
+.footer-copyright {
+	text-align: center;
+}
+
+.footer-copyright .button:hover,
+.footer-copyright .button:focus {
+	color: #000000;
+
+	background-color: #ffffff;
+}
+
+.modal {
+	color: #000000;
+
+	backgroung-color: #f6f3f0;
+	background-image: url("../img/pattern-bg-light.jpg");
+	background-position: 0 0;
+	backgroung-repeat: repeat;
+}
+
+.modal h2 {
+	font-size: 30px;
+	font-height: 42px;
+}
+
+.login-form input[type="text"],
+.login-form input[type="password"] {
+	font: inherit;
+	color: #000000;
+	text-transform: uppercase;
+
+	background-color: #f9f6f3;
+	border: 2px solid #000000;
+}
+
+.login-form input:focus {
+	border-color: #663d15;
+}
+
+.login-checkbox:hover,
+.login-checkbox:focus {
+	color: #663d15;
+}
+
+.restore {
+	color: #000000;
+	text-decoration: underline;
+}
+
+.restore:hover,
+.restore:focus {
+	text-decoration: none;
+}
