--- a/src/css/style.css
+++ b/src/css/style.css
@@ -361,3 +361,164 @@ color: #000000;
 .restore:focus {
 	text-decoration: none;
 }
+
+/*Строчные стили*/
+
+html,
+body {
+	min-width: 1122px;
+	min height: 1750px;
+}
+
+.main-header {
+	margin-bottom: 75px;
+}
+
+.main-navigation {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+	min-height: 285px;
+	background-color: transparent;
+}
+
+.container {
+	width: 940px;
+	margin: 0 auto;
+	padding: 0 10px;
+
+	border: 1px solid green; /*temporary*/
+}
+
+.main-header-logo {
+	order: 2;
+	width: 368px;
+	height: 157px;
+
+	border: 1px solid yellow; /*temporary*/
+}
+
+.main-navigation-wrapper {
+	width: 100%;
+	margin-bottom: 60px;
+	background-color: #000000;
+
+	border: 1px solid red; /*temporary*/
+}
+
+.main-navigation-wrapper .container {
+	display: flex;
+	justify-content: space-between;
+}
+
+.site-navigation {
+	width: 620px;
+	margin: 0;
+	padding: 0;
+
+	list-style: none;
+	border: 1px solid yellow; /*temporary*/
+}
+
+.user-navigation {
+	width: 140px;
+	margin: 0;
+	padding: 0;
+
+	list-style: none;
+	border: 1px solid yellow; /*temporary*/
+}
+
+.features {
+	margin-bottom: 80px;
+}
+
+
+.features-list {
+	display: flex;
+	justify-content: space-between;
+	margin: 0;
+	padding: 0;
+
+	list-style: none;
+}
+
+.feature-item {
+	width: 300px;
+}
+
+.index-colums {
+	display: flex;
+	justify-content: space-between;
+	padding: 50px 80px;
+	margin-bottom: 35px;
+
+}
+
+.news {
+	width: 380px;
+
+	border: 1px solid yellow; /*temporary*/
+}
+
+.news-list {
+	padding: 0;
+	margin: 0;
+}
+
+.gallery {
+	width: 300px;
+
+	border: 1px solid yellow; /*temporary*/
+}
+
+.gallery-content {
+	padding: 0;
+	margin: 0;
+}
+
+.contacts {
+	width: 380px;
+
+	border: 1px solid yellow; /*temporary*/
+}
+
+.appointment {
+	width: 300px;
+
+	border: 1px solid yellow; /*temporary*/
+}
+
+.main-footer {
+	padding: 60px 0;
+	margin-top: 65px;
+}
+
+.main-footer .container {
+	display: flex;
+}
+.footer-contacts {
+	width: 320px;
+	margin: 0;
+	margin-right: 80px;
+
+	border: 1px solid yellow; /*temporary*/
+}
+
+.footer-social {
+	width: 145px;
+
+	border: 1px solid yellow; /*temporary*/
+
+}
+
+.footer-copyright {
+	width: 150px;
+	margin-left: auto;
+
+	border: 1px solid yellow; /*temporary*/
+
+}
+
+
