--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,6 +4,7 @@ body {
 
 
 	font-family: "PT Sans Narrow", Arial, sans-serif;
+
 	font-size: 14px;
 	font-height: 24px;
 	font-weight: 700;
@@ -29,6 +30,16 @@ a {
 	text-decoration: none;
 }
 
+.main-header {
+	margin-bottom: 75px;
+}
+
+.inner-page {
+	margin-bottom: 50px;
+
+	background-color: #000000;
+}
+
 .button {
 	font: inherit;
 
@@ -48,10 +59,22 @@ a {
 }
 
 .main-navigation {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
 	font-size: 16px;
 	font-height: 20px;
 	color: #ffffff;
+
 	background-color: #000000; 
+}
+
+.inner-page .main-navigation {
+	display: flex;
+	align-items: flex-start;
+	flex-direction: row;
+	background-color: #000000;
 }
 
 .site-navigation,
@@ -85,7 +108,12 @@ a {
 }
 
 .index-colums {
-color: #000000;
+	display: flex;
+	justify-content: space-between;
+	padding: 50px 80px;
+	margin-bottom: 35px;
+
+	color: #000000;
 
 	background-color: #f8f5f2;
 	background-image: url("../img/pattern-bg-light.jpg");
@@ -97,6 +125,25 @@ color: #000000;
 	font-size: 30px;
 	line-height: 42px;
 }
+
+.news {
+	width: 380px;
+
+	border: 1px solid yellow; /*temporary*/
+}
+
+.news-list,
+.gallery-content {
+	padding: 0;
+	margin: 0;
+}
+
+.gallery {
+	width: 300px;
+
+	border: 1px solid yellow; /*temporary*/
+}
+
 
 .news-list {
 	list-style: none;
@@ -111,6 +158,18 @@ color: #000000;
 	border: 7px solid #ffffff;
 }
 
+.contacts {
+	width: 380px;
+
+	border: 1px solid yellow; /*temporary*/
+}
+
+.appointment {
+	width: 300px;
+
+	border: 1px solid yellow; /*temporary*/
+}
+
 .appointment-item input {
 	font: inherit;
 
@@ -121,6 +180,8 @@ color: #000000;
 .appointment-item input:focus {
 	border-color: #663d15;
 }
+
+
 
 .product-photo-preview {
 	list-style: none;
@@ -160,11 +221,19 @@ color: #000000;
 }
 
 .page-title {
+	margin: 0;
+	margin-bottom: 15px;
+	padding: 0; 
+
 	font-size: 30px;
 	line-height: 42px;
 }
 
 .breadcrumbs {
+	padding: 0;
+	margin: 0;
+	margin-bottom: 50px;
+
 	list-style: none;
 }
 
@@ -179,6 +248,10 @@ color: #000000;
 
 .breadcrumbs-current {
 	color: #aba9a7;
+}
+
+.filters {
+	width: 180px;
 }
 
 .filter fieldset {
@@ -399,9 +472,22 @@ body {
 	border: 1px solid yellow; /*temporary*/
 }
 
+.inner-page .main-header-logo {
+	order: 0;
+
+	width: 113px;
+	height: 25px;
+	padding: 23px 20px;
+}
+
+.inner-page .main-navigation-wrapper {
+	margin-bottom: 0;
+}
+
 .main-navigation-wrapper {
 	width: 100%;
 	margin-bottom: 60px;
+
 	background-color: #000000;
 
 	border: 1px solid red; /*temporary*/
@@ -412,22 +498,21 @@ body {
 	justify-content: space-between;
 }
 
-.site-navigation {
-	width: 620px;
+.site-navigation,
+.user-navigation {
+	list-style: none;
 	margin: 0;
 	padding: 0;
 
-	list-style: none;
 	border: 1px solid yellow; /*temporary*/
+}
+
+.site-navigation {
+	width: 620px;
 }
 
 .user-navigation {
 	width: 140px;
-	margin: 0;
-	padding: 0;
-
-	list-style: none;
-	border: 1px solid yellow; /*temporary*/
 }
 
 .features {
@@ -446,48 +531,7 @@ body {
 
 .feature-item {
 	width: 300px;
-}
-
-.index-colums {
-	display: flex;
-	justify-content: space-between;
-	padding: 50px 80px;
-	margin-bottom: 35px;
-
-}
-
-.news {
-	width: 380px;
-
-	border: 1px solid yellow; /*temporary*/
-}
-
-.news-list {
-	padding: 0;
-	margin: 0;
-}
-
-.gallery {
-	width: 300px;
-
-	border: 1px solid yellow; /*temporary*/
-}
-
-.gallery-content {
-	padding: 0;
-	margin: 0;
-}
-
-.contacts {
-	width: 380px;
-
-	border: 1px solid yellow; /*temporary*/
-}
-
-.appointment {
-	width: 300px;
-
-	border: 1px solid yellow; /*temporary*/
+	text-align: center;
 }
 
 .main-footer {
@@ -519,6 +563,11 @@ body {
 
 	border: 1px solid yellow; /*temporary*/
 
+}
+
+.catalog-colums {
+	display: flex;
+	justify-content: space-between;
 }
 
 
