--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,6 +40,18 @@ a {
 	background-color: #000000;
 }
 
+.inner-page .main-header {
+	margin-bottom: 50px;
+	backgroung-color: #000000;
+}
+
+.inner-page .main-header-logo {
+	order: 0
+	width: 111px;
+	height: 24px;
+	padding: 23px 20px;
+}
+
 .button {
 	font: inherit;
 
@@ -452,7 +464,7 @@ body {
 	flex-direction: column;
 	align-items: center;
 
-	min-height: 285px;
+	
 	background-color: transparent;
 }
 
@@ -471,6 +483,7 @@ body {
 
 	border: 1px solid yellow; /*temporary*/
 }
+
 
 .inner-page .main-header-logo {
 	order: 0;
