--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,4 @@
+/*Общие стили*/
 body {
 	margin: 0;
 	padding: 0;
@@ -17,6 +18,8 @@ body {
 	background-repeat: no-repeat;
 }
 
+/*Общие стили для 2й и 3й страницы*/
+
 .inner-page {
 	color: #000000;
 
@@ -30,6 +33,8 @@ a {
 	text-decoration: none;
 }
 
+/*шапка сайта*/
+
 .main-header {
 	margin-bottom: 75px;
 }
@@ -37,20 +42,22 @@ a {
 .inner-page {
 	margin-bottom: 50px;
 
-	background-color: #000000;
 }
 
 .inner-page .main-header {
 	margin-bottom: 50px;
-	backgroung-color: #000000;
+	background-color: #000000;
+
 }
 
 .inner-page .main-header-logo {
 	order: 0
 	width: 111px;
-	height: 24px;
+	height: 124px;
 	padding: 23px 20px;
 }
+
+/*стиль кнопок*/
 
 .button {
 	font: inherit;
@@ -70,6 +77,8 @@ a {
 	background-color: #663d15;
 }
 
+/*стиль для основной навигации*/
+
 .main-navigation {
 	display: flex;
 	flex-direction: column;
@@ -79,26 +88,39 @@ a {
 	font-height: 20px;
 	color: #ffffff;
 
-	background-color: #000000; 
+/*	background-color: #000000; */
 }
 
+/*стиль для основной навигации 2 и 3 страницы */
+
 .inner-page .main-navigation {
-	display: flex;
 	align-items: flex-start;
 	flex-direction: row;
-	background-color: #000000;
-	min-height: 70px;
+
+/*	
+
+	background-color: #000000;*/
+	width: 960px;
+	margin: auto;
+	min-height: 70px; /*временно*/
+	border: 1px solid red;
 }
+
+/*убрали нижнюю линию в навигации*/
 
 .site-navigation,
 .user-navigation {
 	list-style: none;
 }
 
+/*белый цвет для ссылок в навигации*/
+
 .site-navigation a,
 .user-navigation a {
 	color: #ffffff;
 }
+
+/*ховер и фокус для навигации*/
 
 .site-navigation a:hover,
 .site-navigation a:focus,
@@ -106,6 +128,18 @@ a {
 .user-navigation a:focus {
 	background-color: #242424;
 }
+
+/*стили для основного контейнера*/
+
+.container {
+	width: 940px;
+	margin: 0 auto;
+	padding: 0 10px;
+
+	border: 1px solid green; /*temporary*/
+}
+
+/*стили для 3 надписей под шапкой*/
 
 .features-list {
 	list-style: none;
@@ -119,6 +153,8 @@ a {
 	font-size: 30px;
 	font-height: 42px;
 }
+
+/*новости и фотогаллерея*/
 
 .index-colums {
 	display: flex;
@@ -157,7 +193,6 @@ a {
 	border: 1px solid yellow; /*temporary*/
 }
 
-
 .news-list {
 	list-style: none;
 }
@@ -170,6 +205,8 @@ a {
 	background-color: #e5e5e5;
 	border: 7px solid #ffffff;
 }
+
+/*контакты и запись*/
 
 .contacts {
 	width: 380px;
@@ -194,7 +231,7 @@ a {
 	border-color: #663d15;
 }
 
-
+/*список 3 сумок в айтеме*/
 
 .product-photo-preview {
 	list-style: none;
@@ -233,6 +270,7 @@ a {
 	list-style: none;
 }
 
+/*заголовок в шопе*/
 .page-title {
 	margin: 0;
 	margin-bottom: 15px;
@@ -240,6 +278,8 @@ a {
 
 	font-size: 30px;
 	line-height: 42px;
+
+	border: 1px solid blue; /*temporary*/
 }
 
 .breadcrumbs {
@@ -248,6 +288,7 @@ a {
 	margin-bottom: 50px;
 
 	list-style: none;
+		border: 1px solid purple; /*temporary*/
 }
 
 .breadcrumbs a {
@@ -263,8 +304,15 @@ a {
 	color: #aba9a7;
 }
 
+.catalog-colums {
+	display: flex;
+	justify-content: space-between;
+}
+
 .filters {
 	width: 180px;
+
+		border: 1px solid grey; /*temporary*/
 }
 
 .filter fieldset {
@@ -292,14 +340,39 @@ a {
 	opacity: 0.5;
 }
 
+.catalog {
+	width: 700px;
+
+		border: 1px solid pink; /*temporary*/
+		min-height: 687px;
+}
+
 .catalog-list {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+
+	margin: 0;
+	padding: 0;
+	margin-bottom: 25px;
 	list-style:none;
 }
 
 .catalog-item {
+	width: 220px;
+	margin-bottom: 20px;
+/*	margin-right: 20px;*/
+
 	background-color: #f7f7f7;
 	box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+
+	min-height: 285px;
+	border: 1px solid black; /*temporary*/
 }
+
+/*.catalog-item:ntn-child(3n) {
+	margin-right: 0;
+}*/
 
 .catalog-item:hover {
 	box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
@@ -333,7 +406,11 @@ a {
 }
 
 .pagination-list {
+	padding: 0;
+	margin: 0;
+
 	list-style: none;
+	border: 1px solid red; /*temporary*/
 }
 
 .pagination-item a {
@@ -362,7 +439,6 @@ a {
 	background-color: #ffffff;
 }
 
-
 .main-footer {
 	color: #ffffff;
 
@@ -370,6 +446,10 @@ a {
 	background-image: url("../img/pattern-bg-dark.jpg");
 	background-position: 0 0;
 	background-repeat: repeat;
+}
+
+.inner-page .main-footer {
+	margin-top: 45px;
 }
 
 .footer-contacts a {
@@ -456,27 +536,6 @@ body {
 	min height: 1750px;
 }
 
-.main-header {
-	margin-bottom: 75px;
-}
-
-.main-navigation {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-
-	
-	background-color: transparent;
-}
-
-.container {
-	width: 940px;
-	margin: 0 auto;
-	padding: 0 10px;
-
-	border: 1px solid green; /*temporary*/
-}
-
 .main-header-logo {
 	order: 2;
 	width: 368px;
@@ -494,8 +553,8 @@ body {
 	padding: 23px 20px;
 }
 
-.inner-page .main-navigation-wrapper {
-	margin-bottom: 0;
+.inner-page .user-navigation {
+	margin-left:auto;
 }
 
 .main-navigation-wrapper {
@@ -532,7 +591,6 @@ body {
 .features {
 	margin-bottom: 80px;
 }
-
 
 .features-list {
 	display: flex;
