--- a/src/css/style.css
+++ b/src/css/style.css
@@ -283,7 +283,7 @@ a {
 .filter input:hover + label,
 .filter input:focus + label {
 	color: #663d15;
-}
+  }
 
 .filter input:disabled + label {
 	color: #000000;
@@ -493,20 +493,10 @@ body {
 	padding: 23px 20px;
 }
 
-.inner-page .main-navigation-wrapper {
-	margin-bottom: 0;
-}
 
-.main-navigation-wrapper {
-	width: 100%;
-	margin-bottom: 60px;
 
-	background-color: #000000;
 
-	border: 1px solid red; /*temporary*/
-}
-
-.main-navigation-wrapper .container {
+.container {
 	display: flex;
 	justify-content: space-between;
 }
