--- a/src/css/style.css
+++ b/src/css/style.css
@@ -782,11 +782,11 @@ input[type="radio"].visually-hidden {
 
 /*Строчные стили*/
 
-html,
+/*html,
 body {
 	min-width: 1122px;
 	min height: 1750px;
-}
+}*/
 
 .main-header-logo {
 	order: 2;
@@ -853,4 +853,205 @@ body {
 	justify-content: space-between;
 }
 
+/*modals*/
 
+.modal {
+	position: fixed;
+
+	display: none;
+
+	color: #000000;
+
+	background-color: #f8f3f0;
+	background-image: url(../img/pattern-bg-light.jpg);
+	background-position: 0 0;
+	background-repeat: repeat;
+	box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+	z-index: 2;
+}
+
+
+/*Оверлей*/
+/*.modal-overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+
+	background: rgba(0, 0, 0, 0.5);
+	z-index: 1;
+}*/
+
+.modal-login {
+	width: 300px;
+	margin-left: -230px;
+	padding: 50px 80px;
+
+	top: 120px;
+	left: 50%;
+
+}
+
+.modal-close {
+	position: absolute;
+	top: 0;
+	right: -34px;
+	width: 22px;
+	height: 22px;
+
+	font-size: 0;
+
+	background-color: transparent;
+	border: 0;
+
+	cursor: pointer;
+}
+
+.modal-close::before,
+.modal-close::after {
+	content: "";
+
+	position: absolute;
+	top: 9px;
+	left: 2px;
+
+	width: 19px;
+	height: 3px;
+
+	background-color: #d0d0d0;
+}
+
+.modal-close::before {
+	transform: rotate(45deg);
+}
+
+.modal-close::after {
+	transform: rotate(-45deg);
+}
+
+.modal-login h2 {
+	margin: 0;
+	margin-bottom: 20px;
+
+	font-size: 30px;
+	line-height: 42px;
+}
+
+.modal-description {
+	margin: 0;
+	margin-bottom: 10px;
+}
+
+.login-form p {
+	margin: 0;
+	margin-bottom: 10px;
+}
+
+.login-form input[type="text"],
+.login-form input[type="password"] {
+	box-sizing: border-box;
+	width: 300px;
+	padding: 10px 15px;
+	padding-right: 40px;
+	font: inherit;
+	color: #000000;
+	text-transform: uppercase;
+
+	background-color: #f9f6f3;
+	border: 2px solid #000000;
+}
+
+.login-form input:focus {
+	border-color: #663d15;
+}
+
+.login-icon-user {
+	background-image: url(../img/user-modal.svg);
+	background-repeat: no-repeat;
+	background-position: 270px center;
+}
+
+.login-icon-password {
+	background-image: url(../img/lock-modal.svg);
+	background-repeat: no-repeat;
+	background-position: 270px center;
+}
+
+.login-form .login-help {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	margin: 15px 0;
+}
+
+.login-checkbox {
+	position: relative;
+	padding-left: 30px;
+	cursor: pointer;
+}
+
+.login-checkbox:hover,
+.login-checkbox:focus {
+	color: #663d15;
+}
+
+.login-checkbox input[type="checkbox"] + .checkbox-indicator {
+	position: absolute;
+	top: 0;
+	left: 0;
+
+	width: 17px;
+	height: 17px;
+
+	border: 2px solid #000000;
+}
+
+.login-checkbox input[type="checkbox"]:focus + .checkbox-indicator {
+	border-color: #663d15;
+	outline: thin dotted;
+	outline: 5px auto -webkit-focus-ring-color;
+}
+
+.login-checkbox input[type="checkbox"]:checked + .checkbox-indicator::before,
+.login-checkbox input[type="checkbox"]:checked + .checkbox-indicator::after {
+	content:" ";
+	position: absolute;
+	top: 8px;
+	left: 1px;
+
+	width: 15px;
+	height: 2px;
+
+	background-color: #000000;
+}
+
+.login-checkbox input[type="checkbox"]:checked + .checkbox-indicator::before {
+	transform: rotate(45deg);
+}
+
+.login-checkbox input[type="checkbox"]:checked + .checkbox-indicator::after {
+	transform: rotate(-45deg);
+}
+
+.login-form .button {
+	width: 100%;
+	margin-right: 0;
+}
+
+.modal-map {
+	top: 50%;
+	left: 50%;
+
+	width: 766px;
+	height: 561px;
+	margin-top: -280px;
+	margin-left: -390px;
+	margin-top: -280px;
+
+	border: 7px solid white;
+}
+
+.modal-map p {
+	margin: 0;
+}
