style to some elements in footer

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -244,8 +244,8 @@ input[type="radio"].visually-hidden {
 	width: 300px;
 	text-align: center;
 
-	background: rgba(255, 45, 82, 0.2);
-	box-shadow: 0 0 0 3px rgb(255, 45, 82);
+/*	background: rgba(255, 45, 82, 0.2);
+	box-shadow: 0 0 0 3px rgb(255, 45, 82);*/
 
 }
 
@@ -257,7 +257,7 @@ input[type="radio"].visually-hidden {
 	font-size: 30px;
 	font-height: 42px;
 
-	background: rgba(255, 45, 82, 0.9);
+	/*background: rgba(255, 45, 82, 0.9);*/
 }
 
 .feature-item p {
@@ -308,8 +308,8 @@ input[type="radio"].visually-hidden {
 .news {
 	width: 380px;
 
-	background: rgba(0, 128, 0, 0.2);
-	box-shadow: 0 0 0 3px; /*temporary*/
+/*	background: rgba(0, 128, 0, 0.2);
+	box-shadow: 0 0 0 3px; */
 }
 
 .news-list {
@@ -333,8 +333,8 @@ input[type="radio"].visually-hidden {
 .gallery {
 	width: 300px;
 
-	background: rgba(0, 128, 0, 0.2);
-	box-shadow: 0 0 0 3px; /*temporary*/
+/*	background: rgba(0, 128, 0, 0.2);
+	box-shadow: 0 0 0 3px; */
 }
 
 .gallery-container {
@@ -342,8 +342,8 @@ input[type="radio"].visually-hidden {
 
 	height: 260px;
 
-	background: rgba(0, 125, 0, 0.2);
-	box-shadow: 0 0 0 3px; /*temporary*/
+/*	background: rgba(0, 125, 0, 0.2);
+	box-shadow: 0 0 0 3px; */
 }
 
 .gallery-content {
@@ -389,8 +389,8 @@ input[type="radio"].visually-hidden {
 .contacts {
 	width: 380px;
 
-	background: rgba(0, 128, 0, 0.2);
-	box-shadow: 0 0 0 3px; /*temporary*/
+/*	background: rgba(0, 128, 0, 0.2);
+	box-shadow: 0 0 0 3px; */
 }
 
 .contacts p {
@@ -401,8 +401,8 @@ input[type="radio"].visually-hidden {
 .appointment {
 	width: 300px;
 
-	background: rgba(0, 128, 0, 0.2);
-	box-shadow: 0 0 0 3px; /*temporary*/
+/*	background: rgba(0, 128, 0, 0.2);
+	box-shadow: 0 0 0 3px; */
 }
 
 .appointment-info {
@@ -421,8 +421,8 @@ input[type="radio"].visually-hidden {
 	margin: 0;
 	margin-bottom: 10px;
 
-	background: rgba(234, 255, 45, 0.2);
-	box-shadow: 0 0 0 2px rgb(234, 255, 45);
+/*	background: rgba(234, 255, 45, 0.2);
+	box-shadow: 0 0 0 2px rgb(234, 255, 45);*/
 }
 
 .appointment-item label {
@@ -440,8 +440,8 @@ input[type="radio"].visually-hidden {
 	padding-bottom: 7px;
 	font: inherit;
 
-	background-color: transparent;
-	border: 2px solid #000000
+/*	background-color: transparent;
+	border: 2px solid #000000*/
 }
 
 .appointment-item input:focus {
@@ -502,7 +502,7 @@ input[type="radio"].visually-hidden {
 	font-size: 30px;
 	line-height: 42px;
 
-	border: 1px solid blue; /*temporary*/
+	/*border: 1px solid blue; */
 }
 
 .breadcrumbs {
@@ -511,7 +511,7 @@ input[type="radio"].visually-hidden {
 	margin-bottom: 50px;
 
 	list-style: none;
-		border: 1px solid purple; /*temporary*/
+	/*border: 1px solid purple; */
 }
 
 .breadcrumbs a {
@@ -535,7 +535,7 @@ input[type="radio"].visually-hidden {
 .filters {
 	width: 180px;
 
-		border: 1px solid grey; /*temporary*/
+	/*border: 1px solid grey; */
 }
 
 .filter fieldset {
@@ -566,8 +566,8 @@ input[type="radio"].visually-hidden {
 .catalog {
 	width: 700px;
 
-		border: 1px solid pink; /*temporary*/
-		min-height: 687px;
+/*	border: 1px solid pink;
+	min-height: 687px;*/
 }
 
 .catalog-list {
@@ -589,8 +589,8 @@ input[type="radio"].visually-hidden {
 	background-color: #f7f7f7;
 	box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 
-	min-height: 285px;
-	border: 1px solid black; /*temporary*/
+/*	min-height: 285px;
+	border: 1px solid black; */
 }
 
 /*.catalog-item:ntn-child(3n) {
@@ -633,7 +633,7 @@ input[type="radio"].visually-hidden {
 	margin: 0;
 
 	list-style: none;
-	border: 1px solid red; /*temporary*/
+	/*border: 1px solid red; */
 }
 
 .pagination-item a {
@@ -719,9 +719,16 @@ input[type="radio"].visually-hidden {
 }
 
 .footer-copyright {
+	width: 150px;
+	margin: 0;
+	margin-left: auto;
 	text-align: center;
 }
 
+.footer-copyright .button {
+	display: block;
+	margin-right: 0;
+}
 .footer-copyright b {
 	display: block;
 	margin-bottom: 15px;
@@ -790,7 +797,7 @@ body {
 	width: 368px;
 	height: 157px;
 
-	border: 1px solid yellow; /*temporary*/
+	/*border: 1px solid yellow; */
 }
 
 .inner-page .main-header-logo {
@@ -818,14 +825,16 @@ body {
 	width: 320px;
 	margin: 0;
 	margin-right: 80px;
+	line-height: 1.7;
+	letter-spacing: 0.7px;
 
-	border: 1px solid yellow; /*temporary*/
+	/*border: 1px solid yellow; */
 }
 
 .footer-social {
 	width: 145px;
 
-	border: 1px solid yellow; /*temporary*/
+	/*border: 1px solid yellow;*/
 }
 
 .footer-social ul {
@@ -842,7 +851,7 @@ body {
 	width: 150px;
 	margin-left: auto;
 
-	border: 1px solid yellow; /*temporary*/
+	/*border: 1px solid yellow;*/
 }
 
 .catalog-colums {
