I add some features to pages

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,6 +10,8 @@ body {
 	font-weight: 700;
 	color: #ffffff;
 	text-transform: uppercase;
+	line-height: 20px;
+	letter-spacing: 0.6px;
 
 	background-color: #000000;
 	background-image: url("../img/bg.jpg");
@@ -100,7 +102,7 @@ input[type="radio"].visually-hidden {
 
 .button {
 	display: inline-block;
-	padding: 15px 30px;
+	padding: 12px 30px;
 	margin-right: 16px;
 
 	font: inherit;
@@ -292,7 +294,7 @@ input[type="radio"].visually-hidden {
 .feature-item h3::after {
 	content: "";
 
-	bottom: -30px;
+	bottom: -40px;
 	left: 50%;
 	margin-left: -10px;
 
@@ -533,9 +535,12 @@ input[type="radio"].visually-hidden {
 	margin-bottom: 50px;
 
 	list-style: none;
+	display: flex;
 }
 
 .breadcrumbs a {
+	margin-right: 45px;
+
 	color: #000000;
 }
 
@@ -548,9 +553,36 @@ input[type="radio"].visually-hidden {
 	color: #aba9a7;
 }
 
+.breadcrumbs li {
+	position: relative;
+}
+
+.breadcrumbs li:not(:last-child)::after {
+	content: "";
+	position: absolute;
+	width: 10px;
+	height: 10px;
+	right: 15px;
+	top: 5px;
+	transform: rotate(45deg);
+
+	background-color: #000000;
+}
+
 .catalog-colums {
 	display: flex;
 	justify-content: space-between;
+}
+
+.product-photos {
+	width: 460px;
+	min-height: 670px;
+}
+
+.product-info {
+	width: 390px;
+	min-height: 670px;
+}
 }
 
 .filters {
@@ -594,7 +626,7 @@ input[type="radio"].visually-hidden {
 	margin: 0;
 	padding: 0;
 	margin-bottom: 25px;
-	list-style:none;
+	list-style: none;
 }
 
 .catalog-item {
@@ -648,6 +680,7 @@ input[type="radio"].visually-hidden {
 	margin: 0;
 
 	list-style: none;
+	min-height: 47px;
 }
 
 .pagination-item a {
@@ -698,6 +731,7 @@ input[type="radio"].visually-hidden {
 	width: 320px;
 	margin: 0;
 	margin-right: 80px;
+	line-height: 25px;
 }
 
 .footer-social {
@@ -717,6 +751,7 @@ input[type="radio"].visually-hidden {
 .footer-copyright {
 	width: 150px;
 	margin-left: auto;
+	margin-top: 0;
 }
 
 .inner-page .main-footer {
